--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<td>
 		<th>
 		<div class='container'>
-		<img src='_coni.png'width='400'height='400'>
+		<img src='symbol.png'width='400'height='400'>
 		<hr>
 		<h2>About the Website:<br><br>
 			This website is created as a <br>Performance Task on our computer<br>
@@ -93,7 +93,7 @@
 <frameset>
 <hr>
 <fieldset>
-<img src='_me.jpg'width='350'height='500'>
+<img src='portrait.jpg'width='350'height='500'>
 <hr>
 <nav id='navigation'><h2 align='middle'> About Me;<br><br>
 Currently, I'm working on my comic<br>
