--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 		legend {
 			color:'e4dccf';
 		}
+		h3 {
+			text-align: center;
+			font-family: Courier;
+			font-weight: normal;
+			font-size: 20px;
+			color: 414141;
+		}
+		
 	</style>
 	</head>
 	<body>
@@ -58,17 +66,19 @@
 		</table>
 		<hr>
 		<fieldset>
-		<nav id='header'><table height='50' width='1150'cellspacing='10'>
+		<nav id='header'><table height='50' width='1150'cellspacing='10'>			
 			<tr>
 			<td>
 			<th bgcolor='e4dccf'><h2><a href='#middle'><u>Alberto</u> <u> the</u> <u> Kalabaw</u>
-			<u> Series</u> <u> Vol.</u> <u>1</u></a></h2></th>
+			<u> Series</u> <u> Vol.</u> <u>1: <u>About</u> <u>the</u> <u>Website</u></a></h2></th>
 			<th bgcolor='e4dccf'><h2><a href='#navigation'><u>Alberto</u> <u> the</u> <u> Kalabaw</u>
-			<u> Series</u> <u> Vol.</u> <u>2</u></a></h2></th>
+			<u> Series</u> <u> Vol.</u> <u>2: About Me</u></a></h2></th>
 			<th bgcolor='e4dccf'><h2><a href='#content'><u>Alberto</u> <u> the</u> <u> Kalabaw</u>
-			<u> Series</u> <u> Vol.</u> <u>3</u></a></h2></th>
-			<th bgcolor='e4dccf'><h2><u>Alberto</u> <u> the</u> <u> Kalabaw</u>
-			<u> Series</u> <u> Vol. 4</u> <u>1</u> </h2></th>
+			<u> Series</u> <u> Vol.</u> <u>3: The Work</u></a></h2></th>
+			<th bgcolor='e4dccf'><a href='inside.html'><h2><u>Alberto</u> <u> the</u> <u> Kalabaw</u>
+			<u> Series</u> <u> Vol. 4:</u> <u>The</u> <u> House</u> <u>Tour</u> </h2></a></th>
+			<th bgcolor='e4dccf'><a href='HOA8_12TW_Nieva_Louelle .html'><h2><u>Alberto</u> <u> the</u> <u> Kalabaw</u>
+			<u> Series</u> <u> Vol. 5:</u> <u>The</u> <u>Calculator</u></h2></a></th>
 		</td>
 	</tr>
 </table>
@@ -84,7 +94,7 @@
 		<hr>
 		<h2>About the Website:<br><br>
 			This website is created as a <br>Performance Task on our computer<br>
-			subject in St. Dominic College<br> Of Asia</h2>
+			subject in St. Dominic College<br> Of Asia.</h2>
 		</div>
 		</th>
 	</td>
@@ -105,7 +115,7 @@ anything, I sometimes look broke<br>
 because of buying art materials<br>
 rather than human necessities.<br>
 I aspire to be a comic and concept<br>
-artist</h2></nav>
+artist.</h2></nav>
 </fieldset>
 <hr>
 <div id='content'>
@@ -129,11 +139,19 @@ artist</h2></nav>
 </fieldset>
 </div>
 <hr>
-
 <fieldset>
 <legend align='middle'>
-<a href='#header'><h2><u>Back to the Top</u></h2></a>
+<a href='#'><h2><u>Back to the Top</u></h2></a>
 </legend>
 </fieldset>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer>
+<h3>Copyright © 2023 designed by Louelle Nieva All Rights Reserved</h3>
+</footer>
 </body>
 </html>
